--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,5 @@
-/* styling by using tags */
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+
 body{
-    color: red;
-}
-
-h1{
-    color: blue;
-}
-
-h2{
-    color: green;
-}
-
-/* styling by using id */
-#lib-header{
-    color: gray;
-}
-
-/* styling by using class */
-.para{
-    color: lightblue;
-}
-
-.para-typography{
-    color: purple;
-}
-
-.die{
-    color: black;
+    font-family: 'EB Garamond', serif;
 }
