--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,14 @@
 body{
     font-family: 'EB Garamond', serif;
 }
+
+/** container **/
+.container-fluid{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.container-center{
+    max-width: 600px;
+    margin: auto;
+}
