--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 
+:root{
+    --primary-color: #10B981;
+}
+
 body{
     font-family: 'EB Garamond', serif;
 }
 
 /** container **/
-.container-fluid{
-    padding-left: 1rem;
-    padding-right: 1rem;
+.container{
+    padding: 0rem 1rem;
 }
 
 .container-center{
     max-width: 600px;
     margin: auto;
 }
+
+/** links **/
+.link{
+    text-decoration: none;     /** to remove underline **/
+    padding: 0.5rem 1rem;
+}
+
+.primary-link{
+    background-color: var(--primary-color);
+    border-radius: 00.5rem;
+    color: white;
+}
+
+.link-secondary{
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
+}
+
