--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body{
     font-family: 'EB Garamond', serif;
 }
 
+hr{
+    margin: 2rem 0rem;
+}
+
 /** container **/
 .container{
     padding: 0rem 1rem;
@@ -36,3 +40,15 @@ body{
     border-radius: 0.5rem;
 }
 
+/** look into BEM naming convention for CSS **/
+
+/** lists **/
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
+}
