--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+/** @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap'); **/
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root{
     --primary-color: #10B981;
     --dark-gray: #6B7280;
-    --off-white: #F3F4F6;
+    --off-white: #ECFDF5;
 }
 
 body{
-    font-family: 'EB Garamond', serif;
+    font-family: Lora, Georgia, Times, serif;
+    /**font-family: 'EB Garamond', serif; **
+    font-family: 'Montserrat', sans-serif; **/
     margin: 0px;
+    letter-spacing: .1px;
 }
 
 hr{
@@ -128,6 +133,11 @@ hr{
 
 .footer .link{
     color: white;
+}
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
 }
 
 .footer ul{
